Делаю страницу сообщений

--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -265,6 +265,7 @@
                 </div>
             </div>
             <div class="row">
+                <!-- блок выбора чата -->
                 <div class="col-4 border-right border-primary overflow-auto messages-box">
                     <div class="mb-3">
                         <div class="input-group input-group-sm">
@@ -538,16 +539,43 @@
                         </div>
                     </div>
                 </div>
+                <!-- правая колонка -->
                 <div class="col-8">
                     <div class="row h-100">
                         <div class="col-12 overflow-auto bg-light">
-                            messages
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="float-left">
+                                        <div class="row">
+                                            <div class="col-11 border border-success rounded">
+                                                А в каком состоянии оборудование?
+                                            </div>
+                                            <div class="col-1">
+                                                11:54
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="float-right">
+                                        <div class="row">
+                                            <div class="col-1">
+                                                11:54
+                                            </div>
+                                            <div class="col-11 border border-danger rounded">
+                                                А в каком состоянии оборудование?
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                         <div class="col-12 align-self-end">
                             <form action="#page">
-                                <div class="form-row mb-2">
+                                <div class="form-row mt-3 mb-2">
                                     <div class="col-1">
-                                        <button type="button" class="btn btn-secondary btn-sm w-100">
+                                        <button type="button" class="btn btn-outline-secondary btn-add-file-message p-0 btn-sm w-100">
                                             <span class="fa fa-paperclip"></span>
                                         </button>
                                     </div>
