--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -229,10 +229,26 @@
             </ul>
         </div>
         <!-- Центральная основная колонка -->
-        <div class="col-lg-9 mb-3 pt-2 border border-primary rounded">
-            <div class="row">
+        <div class="col-lg-9 mb-3 pt-2 border border-light rounded">
+            <div class="row border-bottom border-light">
                 <div class="col-4">
-                    Выберите чат
+                    <div class="mb-2">
+                        <div class="input-group input-group-sm">
+                            <input type="text" id="input-search-chat" class="form-control form-control-sm" placeholder="Поиск по чатам">
+                            <div class="input-group-append">
+                                <div class="input-group-text">
+                                    <span class="fa fa-search"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <select class="form-control form-control-sm" id="select-manufacturer">
+                            <option value="1">HP</option>
+                            <option value="2">Canon</option>
+                            <option value="3">Свой вариант</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="col-8">
                     <div class="row mb-2">
@@ -266,17 +282,8 @@
             </div>
             <div class="row">
                 <!-- блок выбора чата -->
-                <div class="col-4 border-right border-primary overflow-auto messages-box">
-                    <div class="mb-3">
-                        <div class="input-group input-group-sm">
-                            <input type="text" id="input-search-chat" class="form-control form-control-sm" placeholder="Поиск по чатам">
-                            <div class="input-group-append">
-                                <div class="input-group-text">
-                                    <span class="fa fa-search"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-4 border-right border-light overflow-auto bg-white chat-box">
+
                     <div class="mt-1 mb-2 rounded chat-thumb">
                         <div class="row">
                             <div class="col-3 pr-0">
@@ -542,36 +549,91 @@
                 <!-- правая колонка -->
                 <div class="col-8">
                     <div class="row h-100">
-                        <div class="col-12 overflow-auto bg-light">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="float-left">
-                                        <div class="row">
-                                            <div class="col-11 border border-success rounded">
-                                                А в каком состоянии оборудование?
-                                            </div>
-                                            <div class="col-1">
-                                                11:54
-                                            </div>
-                                        </div>
+                        <!-- блок с сообщениями -->
+                        <div class="col-12 messages-box bg-white overflow-auto">
+                            <div class="row justify-content-start mt-3 mb-3">
+                                <div class="col-10">
+                                    <div class="pt-1 pb-1 pl-2 pr-2 rounded d-inline-block bg-light message">
+                                        А в каком состоянии оборудование?
                                     </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="float-right">
-                                        <div class="row">
-                                            <div class="col-1">
-                                                11:54
-                                            </div>
-                                            <div class="col-11 border border-danger rounded">
-                                                А в каком состоянии оборудование?
-                                            </div>
-                                        </div>
+                                    <div class="d-inline-block text-secondary h6">
+                                        11:54
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="row justify-content-end mt-3 mb-3">
+                                <div class="col-10 text-right">
+                                    <div class="d-inline-block text-secondary h6">
+                                        11:54
+                                    </div>
+                                    <div class="pt-1 pb-1 pl-2 pr-2 rounded d-inline-block bg-light-blue text-left message">
+                                        Как новый!
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row justify-content-start mt-3 mb-3">
+                                <div class="col-10">
+                                    <div class="pt-1 pb-1 pl-2 pr-2 rounded d-inline-block bg-light message">
+                                        Подскажите, а проверить можно как то оборудование? Вы сможете продемонстрировать принтер сервис-партнеру ПродайЗИП?
+                                    </div>
+                                    <div class="d-inline-block text-secondary h6">
+                                        11:54
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row justify-content-end mt-3 mb-3">
+                                <div class="col-10 text-right">
+                                    <div class="d-inline-block text-secondary h6">
+                                        11:54
+                                    </div>
+                                    <div class="pt-1 pb-1 pl-2 pr-2 rounded d-inline-block bg-light-blue text-left message">
+                                        Конечно сможем!
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row justify-content-end mt-3 mb-3">
+                                <div class="col-10 text-right">
+                                    <div class="d-inline-block text-secondary h6">
+                                        11:54
+                                    </div>
+                                    <div class="pt-1 pb-1 pl-2 pr-2 rounded d-inline-block bg-light-blue text-left message">
+                                        Отвезем, продемонстрируем, даже гарантию дадим! Наши принтеры печатают лучше новых!
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row justify-content-start mt-3 mb-3">
+                                <div class="col-10">
+                                    <div class="pt-1 pb-1 pl-2 pr-2 rounded d-inline-block bg-light message">
+                                        Что идет в комплекте, картридж, провода, документы?
+                                    </div>
+                                    <div class="d-inline-block text-secondary h6">
+                                        11:54
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row justify-content-start mt-3 mb-3">
+                                <div class="col-10">
+                                    <div class="pt-1 pb-1 pl-2 pr-2 rounded d-inline-block bg-light message">
+                                        И еще подскажите, время разогрева принтера большое, через сколько начинает печатать, сразу, или надо ждать?
+                                    </div>
+                                    <div class="d-inline-block text-secondary h6">
+                                        11:54
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row justify-content-end mt-3 mb-3">
+                                <div class="col-10 text-right">
+                                    <div class="d-inline-block text-secondary h6">
+                                        11:54
+                                    </div>
+                                    <div class="pt-1 pb-1 pl-2 pr-2 rounded d-inline-block bg-light-blue text-left message">
+                                        В комплекте идет картридж, провода, все документы, оригинальная коробка в которой покупали, с целлофаном и пеноплатстом)
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-12 align-self-end">
+                        <!-- блок отправки сообщения -->
+                        <div class="col-12 bg-light align-self-end">
                             <form action="#page">
                                 <div class="form-row mt-3 mb-2">
                                     <div class="col-1">
