--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -233,6 +233,13 @@
             <div class="row border-bottom border-light">
                 <div class="col-4">
                     <div class="mb-2">
+                        <select class="form-control form-control-sm" id="select-manufacturer">
+                            <option disabled selected>Фильтр по объявлениям</option>
+                            <option value="2">Мое объявление 1</option>
+                            <option value="3">Мое объявление 2</option>
+                        </select>
+                    </div>
+                    <div class="mb-2">
                         <div class="input-group input-group-sm">
                             <input type="text" id="input-search-chat" class="form-control form-control-sm" placeholder="Поиск по чатам">
                             <div class="input-group-append">
@@ -241,13 +248,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div>
-                        <select class="form-control form-control-sm" id="select-manufacturer">
-                            <option value="1">HP</option>
-                            <option value="2">Canon</option>
-                            <option value="3">Свой вариант</option>
-                        </select>
                     </div>
                 </div>
                 <div class="col-8">
