Сделал страницу сообщений

--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -254,12 +254,12 @@
                     <div class="row mb-2">
                         <div class="col-9">
                             <div class="h4">
-                                Старая добрая деревяшка Nokia
+                                <a href="#page" target="_blank">Продам МФУ SCX-4200 как новый</a>
                             </div>
                             <div class="h5 mb-0">
-                                <a href="#page">Алексей</a>
+                                <a href="#page" target="_blank">Алексей</a>
                                 <span> - </span>
-                                <a href="#page" class="rating text-decoration-none">
+                                <a href="#page" target="_blank" class="rating text-decoration-none">
                                     <span class="fa fa-star"></span>
                                     <span class="fa fa-star"></span>
                                     <span class="fa fa-star"></span>
@@ -284,7 +284,7 @@
                 <!-- блок выбора чата -->
                 <div class="col-4 border-right border-light overflow-auto bg-white chat-box">
 
-                    <div class="mt-1 mb-2 rounded chat-thumb">
+                    <div class="mt-2 mb-2 rounded chat-thumb">
                         <div class="row">
                             <div class="col-3 pr-0">
                                 <img class="rounded" src="../img/thumb_50x50_phone_1.jpg" alt="">
@@ -313,7 +313,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mt-1 mb-2 rounded chat-thumb">
+                    <div class="mt-1 mb-2 rounded chat-thumb chat-active">
                         <div class="row">
                             <div class="col-3 pr-0">
                                 <img class="rounded" src="../img/thumb_50x50_printer_.jpg" alt="">
@@ -326,7 +326,7 @@
                                     Алексей
                                 </div>
                                 <div class="chat-thumb-message text-secondary">
-                                    А что идет в комплекте с принтером?
+                                    В комплекте идет картридж, провода, все документы, оригинальная коробка в которой покупали, с целлофаном и пеноплатстом)
                                 </div>
                             </div>
                             <div class="col-3 pl-0 text-right">
