Работаю над страницей Мои объявления

--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -233,7 +233,7 @@
             <div class="row border-bottom border-light">
                 <div class="col-4">
                     <div class="mb-2">
-                        <select class="form-control form-control-sm" id="select-manufacturer">
+                        <select class="form-control form-control-sm" id="select-ad">
                             <option disabled selected>Фильтр по объявлениям</option>
                             <option value="2">Мое объявление 1</option>
                             <option value="3">Мое объявление 2</option>
